# ry-safe

./: .coveragerc  .env.example  .gitignore  CHANGELOG_test.md  Cargo.toml  README.md  fastapt_middleware.py  pyproject.toml  requirements-dev.txt  test.sh  tree.md  verify_imports.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
benches/: escape.rs  escape_benchmarks.rs
core/: Cargo.toml  lib.rs
core/tests/: setup_tests.rs
python_bindings/: __init__.py  fastapi_plugin.py  pyproject.toml
python_bindings/rysafe/: __init__.py
rysafe/: Cargo.toml  pyproject.toml
rysafe/src/: escape.rs  lib.rs  python.rs
src/: error.rs  escape.rs  lib.rs  python.rs
src/core/: escape.rs  lib.rs  unescape.rs
src/rysafe/: __init__.py  _rysafe_core.pyi  compat_checker.py  consistency_checker.py  fastapi_integration.py  markupsafe_compat.py
tests/: test_compat.py  test_comprehensive.py  test_escape.py  test_fastapi.py  test_markup_methods.py  test_rust.rs  test_rysafe.py  test_setup.py
