[package]
name = "rysafe"
version = "0.1.0"
authors = ["rysafe contributors <contributors@rysafe.dev>"]
description = "High-performance HTML/XML escaping library for Python, implemented in Rust"
homepage = "https://github.com/pavanepour-k/rysafe"
repository = "https://github.com/pavanepour-k/rysafe"
license = "MIT"
keywords = ["html", "xml", "escaping", "security", "python"]
categories = ["text-processing", "web-programming", "api-bindings"]
readme = "../README.md"
edition = "2021"
rust-version = "1.87"

[lib]
name = "rysafe"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = []


[dependencies]
[[bench]]
name = "escape_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[package.metadata.maturin]
python-source = "python_bindings"
module-name = "rysafe._rysafe"