[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rysafe"
version = "0.1.0"
description = "High-performance HTML/XML escaping library"
authors = [{name = "rysafe contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.68.0", "starlette>=0.14.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "rysafe._rysafe_core"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 79
target-version = "py38"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"